[package]
name = "s3p-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CLI tools for BlockNet S³P (pack/unpack, RS, fountain, PoD)"
rust-version = "1.74"

[dependencies]
s3p-core = "0.1"     # используем опубликованный crate
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
